--- a/index.html
+++ b/index.html
@@ -141,7 +141,9 @@
         </ul>
     </div>
     <div class="message-container">
+        <div class="win-message"></div>
         <button class="restart-button">Restart Game</button>
+        
     </div>
     <script src="script.js"></script>
 
