--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     </div>
     <div class="message-container">
         <div class="win-message"></div>
-        <button class="restart-button">Restart Game</button>
+         <div class="restart-button">Restart Game</div>
         
     </div>
     <script src="script.js"></script>
